test/corpus/update.txt
================================================================================
UPDATE statement
================================================================================

UPDATE table1 SET col1 = 3, col2 = 4

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (identifier)
    (set_clause
      (assignment_expression
        (identifier)
        (number))
      (assignment_expression
        (identifier)
        (number)))))

================================================================================
UPDATE statement with WHERE clause
================================================================================

UPDATE table1 SET col1 = 3, col2 = 4 WHERE col1 > col2

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (identifier)
    (set_clause
      (assignment_expression
        (identifier)
        (number))
      (assignment_expression
        (identifier)
        (number)))
    (where_clause
      (binary_expression
        (identifier)
        (identifier)))))

================================================================================
UPDATE statement with FROM clause
================================================================================

UPDATE foo SET col1 = 1 FROM bar WHERE foo.id = bar.foo_id;

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (identifier)
    (set_clause
      (assignment_expression
        (identifier)
        (number)))
    (from_clause
      (from_item
        (identifier)))
    (where_clause
      (binary_expression
        (dotted_name
          (identifier)
          (identifier))
        (dotted_name
          (identifier)
          (identifier))))))

================================================================================
UPDATE with CTE
================================================================================

WITH t AS (
    SELECT * FROM foo
)
UPDATE bar SET col1 = 3, col2 = 4;

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (with_clause
      (cte
        (identifier)
        (select_statement
          (select_clause
            (select_item
              (asterisk_expression)))
          (from_clause
            (from_item
              (identifier))))))
    (identifier)
    (set_clause
      (assignment_expression
        (identifier)
        (number))
      (assignment_expression
        (identifier)
        (number)))))

================================================================================
UPDATE statement set by column names
================================================================================

UPDATE table1 SET (col1, col2) = (1, 2 + 1);

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (identifier)
    (set_clause
      (assignment_expression
        (identifier_list
          (identifier)
          (identifier))
        (composite_expression
          (number)
          (binary_expression
            (number)
            (number)))))))

================================================================================
UPDATE statement set by column names with row_constructor
================================================================================

UPDATE table1 SET (col1, col2) = ROW(1, 2 + 1);

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (identifier)
    (set_clause
      (assignment_expression
        (identifier_list
          (identifier)
          (identifier))
        (row_constructor
          (number)
          (binary_expression
            (number)
            (number)))))))

================================================================================
UPDATE statement set by column names with select_subexpression
================================================================================

UPDATE table1 SET (col1, col2) = (SELECT a, b FROM table2);

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (identifier)
    (set_clause
      (assignment_expression
        (identifier_list
          (identifier)
          (identifier))
        (select_subexpression
          (select_statement
            (select_clause
              (select_item
                (identifier))
              (select_item
                (identifier)))
            (from_clause
              (from_item
                (identifier)))))))))

================================================================================
UPDATE statement multiple assigments
================================================================================

UPDATE table1 SET
  (col1, col2) = (SELECT a, b FROM table2),
  col3 = 2 * 3,
  (col4, col5) = (3, 4);

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (identifier)
    (set_clause
      (assignment_expression
        (identifier_list
          (identifier)
          (identifier))
        (select_subexpression
          (select_statement
            (select_clause
              (select_item
                (identifier))
              (select_item
                (identifier)))
            (from_clause
              (from_item
                (identifier))))))
      (assignment_expression
        (identifier)
        (binary_expression
          (number)
          (number)))
      (assignment_expression
        (identifier_list
          (identifier)
          (identifier))
        (composite_expression
          (number)
          (number))))))

================================================================================
UPDATE statement with table alias
================================================================================

UPDATE ONLY table1 * AS alias_name
  SET (col1, col2) = (3, 4);

--------------------------------------------------------------------------------

(source_file
  (update_statement
    (identifier)
    (alias
      (identifier))
    (set_clause
      (assignment_expression
        (identifier_list
          (identifier)
          (identifier))
        (composite_expression
          (number)
          (number))))))
